[package]
name = "geotrace"
description = "Geolocation traceroute utility"
version = "0.1.0"
edition = "2024"
license = "MIT/Apache-2.0"
license_file = "LICENSE"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tui = "0.19.0"
crossterm = "0.25"
socket2 = "0.6.3"
libc = "0.2.186"
curl = "0.4.49"
